--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -46,7 +46,7 @@ body{
 .backImg{
     width: 100%;
     height: 100vh;
-    background:linear-gradient(to bottom, rgba(245, 132, 3, 0.74), rgba(0,0,0,0.5)) ,url('../img/112258.jpg');
+    background:linear-gradient(to bottom, rgba(245, 132, 3, 0.74), rgba(0,0,0,0.5)) ,url('img/112258.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
